# 2018.2-TecProg-Deadly-Wish

./: .cproject  .gitignore  .project  README.md
Deadly-Wish/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxygen_config  ERROR_LOG.txt  GLOBAL_LOG.txt  INFO_LOG.txt  Makefile  README.md  cmake_install.cmake  install.sh  log  run.sh
Deadly-Wish/ijengine/: Makefile
Deadly-Wish/ijengine/include/: animation.h  canvas.h  collidable.h  color.h  engine.h  event.h  events_translator.h  exception.h  font.h  game.h  game_event.h  game_events_listener.h  game_object.h  joystick_event.h  kernel.h  keyboard_event.h  level.h  level_factory.h  lib.h  libs.h  line.h  mouse_event.h  os.h  point.h  rectangle.h  sdl2animation.h  (+6 more)
Deadly-Wish/include/: base.h  character.h  character_choose_level.h  character_factory.h  character_selection.h  character_state.h  character_state_factory.h  credits_level.h  deadly_log.h  death_match_level.h  death_state.h  defense_state.h  fireball.h  frost_nova.h  heavy_attack_state.h  idle_state.h  ije02_game.h  infiltrator.h  knight.h  light_attack.h  light_attack_state.h  mage.h  main_level.h  menu_level.h  moving_state.h  skill.h  soldier.h  spear.h  special_state.h  test_level_factory.h  translator.h  util.h  winner_level.h
Deadly-Wish/src/: base.cpp  character.cpp  character_choose_level.cpp  character_factory.cpp  character_selection.cpp  character_state.cpp  character_state_factory.cpp  credits_level.cpp  deadly_log.cpp  death_match_level.cpp  death_state.cpp  defense_state.cpp  fireball.cpp  frost_nova.cpp  heavy_attack_state.cpp  idle_state.cpp  ije02_game.cpp  infiltrator.cpp  knight.cpp  light_attack.cpp  light_attack_state.cpp  mage.cpp  main.cpp  main_level.cpp  menu_level.cpp  moving_state.cpp  skill.cpp  soldier.cpp  spear.cpp  special_state.cpp  test_level_factory.cpp  translator.cpp  winner_level.cpp
(+507 files in other folders)
